# DreamingEngineering

./: CMakeLists.txt  Notes.md  README.md
DreamEngine/: Main.cpp  main.cpp
DreamEngine/Graphics/: Shader.h
DreamEngine/Primitives/: Primitives.cpp  Primitives.h
DreamEngine/Tests/: Triangle_no_texture.cpp  Triangle_no_texture.h
DreamEngine/Window/: Events.cpp  Events.h  Window_Game.cpp  Window_Game.h
DreamEngine/graphics/: Shader.cpp
DreamEngine/res/: main.glslf  main.glslv
